--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,21 +2,23 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
+    <link rel='stylesheet' href='/css/style.css' />
   </head>
   <body ng-app='APP_NAME'>
+    <ng-include src="'html/general/nav.html'"></ng-include>
     <div class="container">
       <ui-view></ui-view>
     </div>
 
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/bower_components/angular/angular.min.js"></script>
-    <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="/vendor/jquery/dist/jquery.min.js"></script>
+    <script src="/vendor/angular/angular.min.js"></script>
+    <script src="/vendor/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="/vendor/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="/vendor/lodash/lodash.min.js"></script>
 
-    <script src="/javascripts/module.js"></script>
-    <script src="/javascripts/models.js"></script>
-    <script src="/javascripts/controllers.js"></script>
+    <script src="/js/module.js"></script>
+    <script src="/js/models.js"></script>
+    <script src="/js/controllers.js"></script>
   </body>
 </html>
