frontend auth working

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,5 +20,6 @@
     <script src="/js/module.js"></script>
     <script src="/js/models.js"></script>
     <script src="/js/controllers.js"></script>
+    <script src="/js/authFactory.js"></script>
   </body>
 </html>
