--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,9 +17,6 @@
     <script src="/vendor/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="/vendor/lodash/lodash.min.js"></script>
 
-    <script src="/js/module.js"></script>
-    <script src="/js/models.js"></script>
-    <script src="/js/controllers.js"></script>
-    <script src="/js/authFactory.js"></script>
+    <script src="/js/all.js"></script>
   </body>
 </html>
